--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Teste</title>
-	<link rel="stylesheet" type="text/css" href="Pojeto.css">
+	<link rel="stylesheet" type="text/css" href="Projeto.css">
 
 	<script type="text/javascript">
 		function pegarvalor() {
