Adição de alguns elementos da div main
Adição da "logo", t"titulo" e "perguntas" (prototipo)

--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -61,6 +61,10 @@
 
 			<div class="Pos36" id="Pos1">Chegada</div>
 		</div>
-		<div class="main"> ass</div>
+		<div class="main">
+			<div class="logo"><h1>&</h1></div>
+			<h1>A Trilha do Cariri</h1>
+			<div class="perguntas"> <p>Perguntas Aqui</p></div>
+		</div>
 
 </html>
