Adicionado CSS player 2

--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -11,6 +11,7 @@
 		<div class="tabuleiro" align="center">
 			<div class="Pos0" id="Pos0">Largada</div>
 			<div class="player"></div>
+			<div class="player1"></div>
 
 			<div class="Pos1" id="Pos1">1</div>
 			<div class="Pos2" id="Pos2">2</div>
