Adicionado movimento player2

--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -10,7 +10,7 @@
 <body style="font-size: 5vw;" onload="carregarBoneco();">
 		<div class="tabuleiro" align="center">
 			<div class="Pos0" id="Pos0">Largada</div>
-			<div class="player"></div>
+			<div class="player0"></div>
 			<div class="player1"></div>
 
 			<div class="Pos1" id="Pos1">1</div>
