--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -15,17 +15,17 @@
 
 			<div class="Pos1" id="Pos1">1</div>
 			<div class="Pos2" id="Pos2">2</div>
-			<div class="Pos3" id="Pos3">3</div>
+			<div class="Pos3" id="Pos3"><img src="santana.svg" style="width: 140%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos4" id="Pos4">4</div>
 			<div class="Pos5" id="Pos5">5</div>
 			<div class="Pos6" id="Pos6">6</div>
 			<div class="Pos7" id="Pos7">7</div>
-			<div class="Pos8" id="Pos8">8</div>
+			<div class="Pos8" id="Pos8"><img src="chapada.svg" style="width: 140%; height: auto; left: -19%; position: relative;"></div>
 
 			<div class="Pos9" id="Pos9">9</div>
 
 			<div class="Pos11" id="Pos17">17</div>
-			<div class="Pos12" id="Pos16">16</div>
+			<div class="Pos12" id="Pos16"><img src="crato.svg" style="width: 140%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos13" id="Pos15">15</div>
 			<div class="Pos14" id="Pos14">14</div>
 			<div class="Pos15" id="Pos13">13</div>
