Adição do indicador do jogador atual na div  principal.

--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -61,6 +61,7 @@
 		<div class="main">
 			<div class="logo"><h1>&</h1></div>
 			<h1>A Trilha do Cariri</h1>
+			<div id="jogadorAtual"> </div>
 			<div class="perguntas"> <p>Perguntas Aqui</p></div>
 			<center>
 				<button onclick="sortearNumero();">Jogar</button>
