--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -7,7 +7,7 @@
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="Projeto.js"></script>
 </head>
-<body style="font-size: 5vw;" onload="carregarBoneco();">
+<body style="font-size: 5vw;" id="pagina">
 		<div class="tabuleiro" align="center">
 			<div class="Pos0" id="Pos0">Largada</div>
 			<div class="player0"></div>
