--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -62,7 +62,7 @@
 			<div class="logo"><h1>&</h1></div>
 			<h1>A Trilha do Cariri</h1>
 			<div id="jogadorAtual"> </div>
-			<div class="perguntas"> <p>Perguntas Aqui</p></div>
+			<div class="perguntas" id="pergunta"> <p>Perguntas Aqui</p></div>
 			<center>
 				<button onclick="sortearNumero();">Jogar</button>
 				<input type="text" id="IpNumeroSorteado" placeholder="Número Sorteado" size="15">
