--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -15,22 +15,22 @@
 
 			<div class="Pos1" id="Pos1">1</div>
 			<div class="Pos2" id="Pos2">2</div>
-			<div class="Pos3" id="Pos3"><img src="santana.svg" style="width: 140%; height: auto; left: -19%; position: relative;"></div>
+			<div class="Pos3" id="Pos3"><img src="santana.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos4" id="Pos4">4</div>
 			<div class="Pos5" id="Pos5">5</div>
 			<div class="Pos6" id="Pos6">6</div>
 			<div class="Pos7" id="Pos7">7</div>
-			<div class="Pos8" id="Pos8"><img src="chapada.svg" style="width: 140%; height: auto; left: -19%; position: relative;"></div>
+			<div class="Pos8" id="Pos8"><img src="chapada.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 
 			<div class="Pos9" id="Pos9">9</div>
 
 			<div class="Pos11" id="Pos17">17</div>
-			<div class="Pos12" id="Pos16"><img src="crato.svg" style="width: 140%; height: auto; left: -19%; position: relative;"></div>
+			<div class="Pos12" id="Pos16"><img src="crato.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos13" id="Pos15">15</div>
 			<div class="Pos14" id="Pos14">14</div>
 			<div class="Pos15" id="Pos13">13</div>
 			<div class="Pos16" id="Pos12">12</div>
-			<div class="Pos17" id="Pos11">11</div>
+			<div class="Pos17" id="Pos11"><img src="barbalha.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos10" id="Pos10">10</div>
 
 			<div class="Pos18" id="Pos18">18</div>
@@ -39,7 +39,7 @@
 			<div class="Pos20" id="Pos20">20</div>
 			<div class="Pos21" id="Pos21">21</div>
 			<div class="Pos22" id="Pos22">22</div>
-			<div class="Pos23" id="Pos23">23</div>
+			<div class="Pos23" id="Pos23"><img src="matriz.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos24" id="Pos24">24</div>
 			<div class="Pos25" id="Pos25">25</div>
 			<div class="Pos26" id="Pos26">26</div>
@@ -49,9 +49,9 @@
 			<div class="Pos28" id="Pos35">35</div>
 			<div class="Pos29" id="Pos34">34</div>
 			<div class="Pos30" id="Pos33">33</div>
-			<div class="Pos31" id="Pos32">32</div>
+			<div class="Pos31" id="Pos32"><img src="juazeiro.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos32" id="Pos31">31</div>
-			<div class="Pos33" id="Pos30">30</div>
+			<div class="Pos33" id="Pos30"><img src="luzeiro.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos34" id="Pos29">29</div>
 			<div class="Pos35" id="Pos28">28</div>
 
