--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -77,5 +77,13 @@
 			</center>
 		</div>
 
+		<div class="venceu" align="center">
+			<div class="interna">
+				<h4></h4>
+				<p></p>
+				<button onclick="window.location.reload();">Reinicie o Jogo</button>
+			</div>
+		</div>
+
 
 </html>
