--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Jogo Tabuleiro</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="Projeto.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="Projeto.js"></script>
 </head>
@@ -66,10 +68,10 @@
 		</div>
 
 		<div class="main">
-			<div class="logo"><h1>&</h1></div>
+			<div class="logo"> <h1>&</h1> </div>
 			<h1>A Trilha do Cariri</h1>
 			<div id="jogadorAtual"> </div>
-			<div class="perguntas" id="pergunta"> <p>Perguntas Aqui</p></div>
+			<div class="perguntas" id="pergunta"> </div>
 			<center>
 				<button onclick="sortearNumero();">Jogar</button>
 				<input type="text" id="IpNumeroSorteado" placeholder="Número Sorteado" size="15">
