desabilitar / habilitar botão jogar

--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -71,7 +71,7 @@
 			<div id="jogadorAtual"> </div>
 			<div class="perguntas" id="pergunta"> </div>
 			<center>
-				<button onclick="sortearNumero();">Jogar</button>
+				<button onclick="sortearNumero();" id="rodar">Jogar</button>
 				<input type="text" id="IpNumeroSorteado" placeholder="Número Sorteado" size="15">
 				<input type="text" id="IpPassoAtual" placeholder="Passo Atual" size="15">
 			</center>
