--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -10,8 +10,8 @@
 <body style="font-size: 5vw;" id="pagina">
 		<div class="tabuleiro" align="center">
 			<div class="Pos0" id="Pos0">Largada</div>
-			<div class="player0"></div>
-			<div class="player1"></div>
+			<div class="player0"><img src="player0.svg" style="height: 8vw; width: auto; top: -1.5vw; left: 300%; position: relative;"></div>
+			<div class="player1"><img src="player1.svg" style="height: 8vw; width: auto; top: -1.43vw; left: -60%; position: relative;"></div>
 
 			<div class="Pos1" id="Pos1">1</div>
 			<div class="Pos2" id="Pos2">2</div>
