--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="Projeto.css">
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="Projeto.js"></script>
+	<link rel="stylesheet" type="text/css" href="jquery-3.4.1.js">
 </head>
 <body style="font-size: 5vw;" id="pagina">
 		<div class="tabuleiro" align="center">
