--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -66,9 +66,8 @@
 		</div>
 
 		<div class="main">
-			<div class="logo"> <h1>&</h1> </div>
-			<h1>A Trilha do Cariri</h1>
-			<div id="jogadorAtual"> </div>
+			<div class="logo"></div>
+			<div id="jogadorAtual" style="font-size: 1.5vw; margin-top: -6%;"> <h1 style="color: green;">Clique em Jogar</h1> </div>
 			<div class="perguntas" id="pergunta"> </div>
 			<center>
 				<button onclick="sortearNumero();" id="rodar">Jogar</button>
@@ -79,7 +78,7 @@
 
 		<div class="venceu" align="center">
 			<div class="interna">
-				<h4></h4>
+				<h4>Vez do Jogador 1</h4>
 				<p></p>
 				<button onclick="window.location.reload();">Reinicie o Jogo</button>
 			</div>
