Adição de Alerts
Adição dos alerts de feedback, mostra para o jogador se acertou ou errou a pergunta, e quantas casas avançou ou voltou.

--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -83,6 +83,8 @@
 				<button onclick="window.location.reload();">Reinicie o Jogo</button>
 			</div>
 		</div>
+		<div class="alertAcertou" align="center"></div>
+		<div class="alertErrou" align="center"></div>
 
 
 </html>
