Adição do estilo "Botão Confirmar"

--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -70,7 +70,7 @@
 			<div id="jogadorAtual" style="font-size: 1.5vw; margin-top: -6%;"> <h1 style="color: green;">Clique em Jogar</h1> </div>
 			<div class="perguntas" id="pergunta"> </div>
 			<center>
-				<button onclick="sortearNumero();" id="rodar">Jogar</button>
+				<button onclick="sortearNumero();" id="rodar" class="butn">Jogar</button>
 				<input type="text" id="IpNumeroSorteado" placeholder="Número Sorteado" size="15">
 				<input type="text" id="IpPassoAtual" placeholder="Passo Atual" size="15">
 			</center>
