Correção de Bugs
remoção do Bug na pergunta do Luzeiro.
remoção do bug da "vez do Jogador", que não estava atualizando em algumas ocasiões;

--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="Projeto.js"></script>
 </head>
 <body style="font-size: 5vw;" id="pagina">
-	
+
 		<div class="tabuleiro" align="center">
 			<div class="Pos0" id="Pos0">Largada</div>
 			<div class="player0"><img src="player0.svg" style="height: 8vw; width: auto; top: -1.5vw; left: 300%; position: relative;"></div>
@@ -71,9 +71,10 @@
 			<div id="jogadorAtual" style="font-size: 1.5vw; margin-top: -6%;"> <h1 style="color: green;">Clique em Jogar</h1> </div>
 			<div class="perguntas" id="pergunta"> </div>
 			<center>
+				<br><br>
 				<button onclick="sortearNumero();" id="rodar" class="butn">Jogar</button>
-				<input type="text" id="IpNumeroSorteado" placeholder="Número Sorteado" size="15">
-				<input type="text" id="IpPassoAtual" placeholder="Passo Atual" size="15">
+				<!--<input type="text" id="IpNumeroSorteado" placeholder="Número Sorteado" size="15">
+				<input type="text" id="IpPassoAtual" placeholder="Passo Atual" size="15">-->
 			</center>
 		</div>
 
