--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -76,6 +76,7 @@
 				<!--<input type="text" id="IpNumeroSorteado" placeholder="Número Sorteado" size="15">
 				<input type="text" id="IpPassoAtual" placeholder="Passo Atual" size="15">-->
 			</center>
+			<div id="dadoSorteado"> </div>
 		</div>
 
 		<div class="venceu" align="center">
