--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -71,8 +71,8 @@
 			<div id="jogadorAtual" style="font-size: 1.5vw; margin-top: -6%;"> <h1 style="color: green;">Clique em Jogar</h1> </div>
 			<div class="perguntas" id="pergunta"> </div>
 			<center>
-				<br><br>
-				<button onclick="sortearNumero();" id="rodar" class="butn">Jogar</button>
+				
+				<button onclick="sortearNumero();" id="rodar" class="butn" style="margin-top: 5%">Jogar</button>
 				<!--<input type="text" id="IpNumeroSorteado" placeholder="Número Sorteado" size="15">
 				<input type="text" id="IpPassoAtual" placeholder="Passo Atual" size="15">-->
 			</center>
