--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -67,8 +67,12 @@
 		</div>
 
 		<div class="main">
-			<div class="logo"></div>
-			<div id="jogadorAtual" style="font-size: 1.5vw; margin-top: -6%;"> <h1 style="color: green;">Clique em Jogar</h1> </div>
+			<img src="playerIcon1.svg" id="icon1" style="height: 12vw; width: auto; position: absolute; top: 3%; left: 3%; opacity: 0.3;">
+			<img src="playerIcon2.svg" id="icon2" style="height: 12vw; width: auto; position: absolute; top: 3%; right: 3%; opacity: 0.3;">
+			<div class="logo"><img src="logo1.svg" style="height: 13vw; width: auto; position: relative; align-content: center;"></div>
+			<div id="jogadorAtual" style="font-size: 1.5vw; margin-top: -6%; position: relative;"> 
+				<h1 style="color: green;">Clique em Jogar</h1> 
+			</div>
 			<div class="perguntas" id="pergunta"> </div>
 			<center>
 				
