--- a/Projeto/Projeto.html
+++ b/Projeto/Projeto.html
@@ -85,9 +85,8 @@
 
 		<div class="venceu" align="center">
 			<div class="interna">
-				<h4>Vez do Jogador 1</h4>
-				<p></p>
-				<button onclick="window.location.reload();">Reinicie o Jogo</button>
+				<div style="height: 70%; width: auto; position: relative;" id="interna2"></div>
+				<button class="butn" onclick="window.location.reload();">Reinicie o Jogo</button>
 			</div>
 		</div>
 		<div class="alertAcertou" align="center"></div>
