--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
 
 		<div class="tabuleiro" align="center">
 			<div class="Pos0" id="Pos0">Largada</div>
-			<div class="player0"><img src="player0.svg" style="height: 8vw; width: auto; top: -1.5vw; left: 300%; position: relative;"></div>
-			<div class="player1"><img src="player1.svg" style="height: 8vw; width: auto; top: -1.43vw; left: -60%; position: relative;"></div>
+			<div class="player0"><img src="Design/player0.svg" style="height: 8vw; width: auto; top: -1.5vw; left: 300%; position: relative;"></div>
+			<div class="player1"><img src="Design/player1.svg" style="height: 8vw; width: auto; top: -1.43vw; left: -60%; position: relative;"></div>
 
 			<div class="Pos1" id="Pos1">1</div>
 			<div class="Pos2" id="Pos2">2</div>
 			<div class="Pos3" id="Pos3" title="Museu de Paleontologia">
-				<img src="santana.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
+				<img src="Design/Backgrounds/santana.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos4" id="Pos4">4</div>
 			<div class="Pos5" id="Pos5">5</div>
 			<div class="Pos6" id="Pos6">6</div>
 			<div class="Pos7" id="Pos7">7</div>
 			<div class="Pos8" id="Pos8" title="Chapada do Araripe">
-				<img src="chapada.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
+				<img src="Design/Backgrounds/chapada.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 
 			<div class="Pos9" id="Pos9">9</div>
 
 			<div class="Pos11" id="Pos17">17</div>
 			<div class="Pos12" id="Pos16" title="Estátua de Nossa Sra. de Fátima">
-				<img src="crato.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
+				<img src="Design/Backgrounds/crato.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos13" id="Pos15">15</div>
 			<div class="Pos14" id="Pos14">14</div>
 			<div class="Pos15" id="Pos13">13</div>
 			<div class="Pos16" id="Pos12">12</div>
 			<div class="Pos17" id="Pos11" title="Festa de Santo Antônio">
-				<img src="barbalha.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
+				<img src="Design/Backgrounds/barbalha.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos10" id="Pos10">10</div>
 
 			<div class="Pos18" id="Pos18">18</div>
@@ -45,7 +45,7 @@
 			<div class="Pos21" id="Pos21">21</div>
 			<div class="Pos22" id="Pos22">22</div>
 			<div class="Pos23" id="Pos23" title="Igreja Matriz de São José">
-				<img src="matriz.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
+				<img src="Design/Backgrounds/matriz.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos24" id="Pos24">24</div>
 			<div class="Pos25" id="Pos25">25</div>
 			<div class="Pos26" id="Pos26">26</div>
@@ -56,10 +56,10 @@
 			<div class="Pos29" id="Pos34">34</div>
 			<div class="Pos30" id="Pos33">33</div>
 			<div class="Pos31" id="Pos32" title="Estátua do Horto">
-				<img src="juazeiro.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
+				<img src="Design/Backgrounds/juazeiro.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos32" id="Pos31">31</div>
 			<div class="Pos33" id="Pos30" title="Luzeiro da Fé">
-				<img src="luzeiro.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
+				<img src="Design/Backgrounds/luzeiro.svg" style="width: 139%; height: auto; left: -19%; position: relative;"></div>
 			<div class="Pos34" id="Pos29">29</div>
 			<div class="Pos35" id="Pos28">28</div>
 
@@ -67,8 +67,8 @@
 		</div>
 
 		<div class="main">
-			<img src="playerIcon1.svg" id="icon1" style="height: 12vw; width: auto; position: absolute; top: 3%; left: 3%; opacity: 0.3;">
-			<img src="playerIcon2.svg" id="icon2" style="height: 12vw; width: auto; position: absolute; top: 3%; right: 3%; opacity: 0.3;">
+			<img src="Design/Backgrounds/playerIcon1.svg" id="icon1" style="height: 12vw; width: auto; position: absolute; top: 3%; left: 3%; opacity: 0.3;">
+			<img src="Design/Backgrounds/playerIcon2.svg" id="icon2" style="height: 12vw; width: auto; position: absolute; top: 3%; right: 3%; opacity: 0.3;">
 			<div class="logo"><img src="logo1.svg" style="height: 13vw; width: auto; position: relative; align-content: center;"></div>
 			<div id="jogadorAtual" style="font-size: 1.5vw; margin-top: -6%; position: relative;"> 
 				<h1 style="color: green;">Clique em Jogar</h1> 
