--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Jogo Tabuleiro</title>
 	<link rel="stylesheet" type="text/css" href="Projeto.css">
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="Projeto.js"></script>
+	<script type="text/javascript" src="Scripts/Projeto.js"></script>
 </head>
 <body style="font-size: 5vw;" id="pagina">
 
@@ -69,7 +69,7 @@
 		<div class="main">
 			<img src="Design/Backgrounds/playerIcon1.svg" id="icon1" style="height: 12vw; width: auto; position: absolute; top: 3%; left: 3%; opacity: 0.3;">
 			<img src="Design/Backgrounds/playerIcon2.svg" id="icon2" style="height: 12vw; width: auto; position: absolute; top: 3%; right: 3%; opacity: 0.3;">
-			<div class="logo"><img src="logo1.svg" style="height: 13vw; width: auto; position: relative; align-content: center;"></div>
+			<div class="logo"><img src="Design/logo1.svg" style="height: 13vw; width: auto; position: relative; align-content: center;"></div>
 			<div id="jogadorAtual" style="font-size: 1.5vw; margin-top: -6%; position: relative;"> 
 				<h1 style="color: green;">Clique em Jogar</h1> 
 			</div>
