Organização dos elementos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Jogo Tabuleiro</title>
+	<title>Tabuleiro Cariri - Cicero Danilo | Cleberson Cardoso | Elias Sampaio</title>
 	<link rel="stylesheet" type="text/css" href="Projeto.css">
 	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="Scripts/Projeto.js"></script>
